# webhooks

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile
.github/workflows/: deploy.yml  docker-publish.yml
config/: Cargo.toml
config/src/: lib.rs
dispatch/: Cargo.toml
dispatch/src/: main.rs
server/: Cargo.toml
server/src/: main.rs
