[package]
name = "dispatch"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.1", features = ["derive"] }
config = { path = "../config" }
toml = "0.5.9"
tracing = "0.1.26"
tracing-subscriber = "0.2.18"
