[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.50"
axum = "0.5.4"
base64 = "0.13.0"
clap = { version = "3.1", features = ["derive"] }
config = { path = "../config" }
hyper = "0.14.7"
serde = {version = "1.0.126", features = ["derive"]}
tokio = {version = "1.6.0", features = [ "full" ]}
toml = "0.5.9"
tower = "0.4.12"
tower-http = {version = "0.3.3", features = ["trace"] }
tracing = "0.1.26"
tracing-subscriber = "0.2.18"
hmac-sha256 = "0.1.7"
